--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -21,76 +21,103 @@
                         <sections>
                             <tableViewSection id="azD-dW-goG">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="NaJ-Vl-Yeh" detailTextLabel="b7a-y0-agq" style="IBUITableViewCellStyleValue1" id="pGO-uO-afa">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="pGO-uO-afa">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pGO-uO-afa" id="4MO-B9-Q8L">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Agency Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NaJ-Vl-Yeh">
-                                                    <rect key="frame" x="16" y="12" width="107" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Gn-nD-IWU">
+                                                    <rect key="frame" x="262" y="6" width="97" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="5Gn-nD-IWU" secondAttribute="height" multiplier="97:30" id="GIR-E5-ScT"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b7a-y0-agq">
-                                                    <rect key="frame" x="315" y="12" width="44" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Agency Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOT-67-mlr">
+                                                    <rect key="frame" x="16" y="11.5" width="107" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="UOT-67-mlr" firstAttribute="leading" secondItem="4MO-B9-Q8L" secondAttribute="leading" constant="16" id="4eO-pT-9ke"/>
+                                                <constraint firstAttribute="trailing" secondItem="5Gn-nD-IWU" secondAttribute="trailing" constant="16" id="FWq-1I-Zme"/>
+                                                <constraint firstAttribute="bottom" secondItem="5Gn-nD-IWU" secondAttribute="bottom" constant="7.5" id="Gm6-p6-KKA"/>
+                                                <constraint firstItem="5Gn-nD-IWU" firstAttribute="top" secondItem="4MO-B9-Q8L" secondAttribute="top" constant="6" id="W71-IG-jng"/>
+                                                <constraint firstAttribute="bottom" secondItem="UOT-67-mlr" secondAttribute="bottom" constant="11" id="a6G-GP-A9d"/>
+                                                <constraint firstItem="UOT-67-mlr" firstAttribute="top" secondItem="4MO-B9-Q8L" secondAttribute="top" constant="11.5" id="mB4-gb-lTd"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="lDk-dU-KGT" detailTextLabel="K37-QE-B6E" style="IBUITableViewCellStyleValue1" id="zkO-zu-JLg">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="zkO-zu-JLg">
                                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zkO-zu-JLg" id="zyn-Zy-pYV">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Camera Resolution" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lDk-dU-KGT">
-                                                    <rect key="frame" x="16" y="12" width="144.5" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Camera Resolution" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qCq-da-GNh">
+                                                    <rect key="frame" x="262" y="6" width="97" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="qCq-da-GNh" secondAttribute="height" multiplier="97:30" id="Fd1-5a-R7s"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K37-QE-B6E">
-                                                    <rect key="frame" x="315" y="12" width="44" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera Resolution" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfL-ZP-ha5">
+                                                    <rect key="frame" x="16" y="11" width="145" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="qCq-da-GNh" secondAttribute="trailing" constant="16" id="5XK-jn-F7M"/>
+                                                <constraint firstAttribute="bottom" secondItem="qCq-da-GNh" secondAttribute="bottom" constant="7.5" id="Me1-Lr-ngl"/>
+                                                <constraint firstAttribute="bottom" secondItem="dfL-ZP-ha5" secondAttribute="bottom" constant="11.5" id="Q7V-9l-Peq"/>
+                                                <constraint firstItem="dfL-ZP-ha5" firstAttribute="leading" secondItem="zyn-Zy-pYV" secondAttribute="leading" constant="16" id="Vbh-0d-M0n"/>
+                                                <constraint firstItem="qCq-da-GNh" firstAttribute="top" secondItem="zyn-Zy-pYV" secondAttribute="top" constant="6" id="ZjU-RC-caU"/>
+                                                <constraint firstItem="dfL-ZP-ha5" firstAttribute="top" secondItem="zyn-Zy-pYV" secondAttribute="top" constant="11" id="vje-nL-9fz"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="gyZ-pD-dM5" detailTextLabel="srD-sL-J9q" style="IBUITableViewCellStyleValue1" id="7Re-4A-7Tm">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="7Re-4A-7Tm">
                                         <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7Re-4A-7Tm" id="0Fn-7a-SiZ">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Distance Between Pictures" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gyZ-pD-dM5">
-                                                    <rect key="frame" x="16" y="12" width="205" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rLO-we-zfo">
+                                                    <rect key="frame" x="262" y="6" width="97" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="rLO-we-zfo" secondAttribute="height" multiplier="97:30" id="VEa-ec-ThX"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="srD-sL-J9q">
-                                                    <rect key="frame" x="315" y="12" width="44" height="20.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance Between Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndR-Dg-7wE">
+                                                    <rect key="frame" x="16" y="11" width="196" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="rLO-we-zfo" secondAttribute="trailing" constant="16" id="I6l-s9-pYk"/>
+                                                <constraint firstAttribute="bottom" secondItem="rLO-we-zfo" secondAttribute="bottom" constant="7.5" id="YHM-Qt-OzP"/>
+                                                <constraint firstItem="rLO-we-zfo" firstAttribute="top" secondItem="0Fn-7a-SiZ" secondAttribute="top" constant="6" id="amP-ba-htg"/>
+                                                <constraint firstItem="ndR-Dg-7wE" firstAttribute="top" secondItem="0Fn-7a-SiZ" secondAttribute="top" constant="11" id="deg-LI-vY5"/>
+                                                <constraint firstAttribute="bottom" secondItem="ndR-Dg-7wE" secondAttribute="bottom" constant="11.5" id="lJG-zR-luU"/>
+                                                <constraint firstItem="ndR-Dg-7wE" firstAttribute="leading" secondItem="0Fn-7a-SiZ" secondAttribute="leading" constant="16" id="vUr-KE-9iy"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -102,6 +129,10 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Settings" image="settingsTab" id="DaH-sQ-RId"/>
+                    <connections>
+                        <outlet property="distanceTextField" destination="rLO-we-zfo" id="hcE-GG-54s"/>
+                        <outlet property="resolutionTextField" destination="qCq-da-GNh" id="hro-Ir-cVo"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xu4-ts-Df8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
