--- a/Test Projects/Collection View/Collection View/Base.lproj/Main.storyboard
+++ b/Test Projects/Collection View/Collection View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dX8-1a-beh">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,26 +15,44 @@
             <objects>
                 <viewController id="dX8-1a-beh" customClass="ViewController" customModule="Collection_View" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h2A-5w-WI4">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vqr-Zz-KyU">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YrB-fl-EWo">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="200" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="YmQ-jJ-kAn">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="a57-JH-LO5" customClass="ImageCollectionViewCell" customModule="Collection_View" customModuleProvider="target">
+                                        <rect key="frame" x="87.666666666666671" y="0.0" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wbn-OI-e6J">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="wbn-OI-e6J" firstAttribute="top" secondItem="a57-JH-LO5" secondAttribute="top" id="BYo-jc-LMP"/>
+                                            <constraint firstAttribute="trailing" secondItem="wbn-OI-e6J" secondAttribute="trailing" id="E92-Te-X1U"/>
+                                            <constraint firstItem="wbn-OI-e6J" firstAttribute="leading" secondItem="a57-JH-LO5" secondAttribute="leading" id="HTg-aI-e1d"/>
+                                            <constraint firstAttribute="bottom" secondItem="wbn-OI-e6J" secondAttribute="bottom" id="Jm1-OS-mZK"/>
+                                            <constraint firstItem="wbn-OI-e6J" firstAttribute="leading" secondItem="a57-JH-LO5" secondAttribute="leading" id="Lvz-M9-kGH"/>
+                                            <constraint firstAttribute="trailing" secondItem="wbn-OI-e6J" secondAttribute="trailing" id="itd-KE-EAV"/>
+                                            <constraint firstItem="wbn-OI-e6J" firstAttribute="top" secondItem="a57-JH-LO5" secondAttribute="top" id="pYv-3S-a6D"/>
+                                            <constraint firstAttribute="bottom" secondItem="wbn-OI-e6J" secondAttribute="bottom" id="uPb-Pn-QF1"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="wbn-OI-e6J" id="dO9-Ni-iMg"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -54,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DtG-Zp-VbA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-12" y="-62.518740629685162"/>
+            <point key="canvasLocation" x="-12" y="-62.807881773399018"/>
         </scene>
     </scenes>
 </document>
