--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -145,14 +145,59 @@
                     <view key="view" contentMode="scaleToFill" id="eZV-Nl-Mft">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vC7-78-wjX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="veu-f3-icv">
+                                    <size key="itemSize" width="200" height="200"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="D97-62-ZGG" customClass="ImageCollectionViewCell" customModule="Road_Capture" customModuleProvider="target">
+                                        <rect key="frame" x="87.5" y="0.0" width="200" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c1l-Si-Ev2">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="c1l-Si-Ev2" firstAttribute="top" secondItem="D97-62-ZGG" secondAttribute="top" id="1t9-aK-Rmb"/>
+                                            <constraint firstItem="c1l-Si-Ev2" firstAttribute="leading" secondItem="D97-62-ZGG" secondAttribute="leading" id="JbK-Uq-4rc"/>
+                                            <constraint firstAttribute="trailing" secondItem="c1l-Si-Ev2" secondAttribute="trailing" id="XSv-UP-pzL"/>
+                                            <constraint firstAttribute="bottom" secondItem="c1l-Si-Ev2" secondAttribute="bottom" id="cwz-Rw-FFP"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="c1l-Si-Ev2" id="7PR-0f-yaE"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vC7-78-wjX" firstAttribute="top" secondItem="gGU-Rb-SOl" secondAttribute="top" id="cEr-Tl-r6h"/>
+                            <constraint firstItem="vC7-78-wjX" firstAttribute="leading" secondItem="gGU-Rb-SOl" secondAttribute="leading" id="lnd-x8-2g3"/>
+                            <constraint firstItem="vC7-78-wjX" firstAttribute="bottom" secondItem="gGU-Rb-SOl" secondAttribute="bottom" id="vxt-qz-WvV"/>
+                            <constraint firstItem="vC7-78-wjX" firstAttribute="trailing" secondItem="gGU-Rb-SOl" secondAttribute="trailing" id="xiu-3Q-c36"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="gGU-Rb-SOl"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Gallery" image="galleryTab" id="v7h-FM-MTG"/>
+                    <connections>
+                        <outlet property="collectionView" destination="vC7-78-wjX" id="jac-XC-IgK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GHQ-hF-oqD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-70" y="359"/>
+            <point key="canvasLocation" x="-71.200000000000003" y="358.4707646176912"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="NKt-nu-Xay">
@@ -227,9 +272,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cameraTab" width="45" height="45"/>
-        <image name="galleryTab" width="45" height="45"/>
-        <image name="helpTab" width="45" height="45"/>
-        <image name="settingsTab" width="45" height="45"/>
+        <image name="cameraTab" width="30" height="30"/>
+        <image name="galleryTab" width="30" height="30"/>
+        <image name="helpTab" width="30" height="30"/>
+        <image name="settingsTab" width="30" height="30"/>
     </resources>
 </document>
